--- a/requirements/requirements-base.in
+++ b/requirements/requirements-base.in
@@ -25,6 +25,7 @@ django-redis==5.4.0
 django-select2==8.2.1
 django-staff-sso-client==4.3.0
 endesive==2.17.3
+govuk-frontend-jinja==3.4.0
 gunicorn[gevent]==23.0.0
 html2text==2024.2.26
 humanize==4.10.0
