--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "icms",
-  "scripts": {
-    "build": "echo build"
-  },
-  "engines": {
-    "node": "19.9.0"
-  },
+  "version": "1.0.0",
+  "description": "ICMS",
+  "private": true,
   "dependencies": {
+    "autobind-decorator": "^2.4.0",
+    "core-js": "^3.39.0",
+    "govuk-frontend": "^5.7.1",
     "html5shiv": "^3.7.3",
-    "jodit": "^3.24.4",
+    "jodit": "^3.24.9",
     "jquery": "^3.7.1",
     "jquery-fontspy": "^3.0.0",
-    "jquery-ui-dist": "^1.13.2",
+    "jquery-ui-dist": "^1.13.3",
     "jquery.formset": "^1.3.0",
+    "sass": "^1.80.6",
     "select2": "^4.0.13",
     "sticky-kit": "^1.1.3"
-  }
+  },
+  "scripts": {
+    "test": ""
+  },
+  "author": "",
+  "license": "ISC"
 }
