--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -166,6 +166,8 @@ googleapis-common-protos==1.65.0
     # via
     #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-exporter-otlp-proto-http
+govuk-frontend-jinja==3.4.0
+    # via -r /code/requirements/requirements-base.in
 greenlet==3.0.3
     # via
     #   gevent
@@ -187,7 +189,9 @@ idna==3.8
 importlib-metadata==6.11.0
     # via opentelemetry-api
 jinja2==3.1.4
-    # via -r /code/requirements/requirements-base.in
+    # via
+    #   -r /code/requirements/requirements-base.in
+    #   govuk-frontend-jinja
 jmespath==1.0.1
     # via
     #   boto3
