--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "icms",
+    "scripts": {
+    "build": "echo build",
+    "test": ""
+  },
+  "engines": {
+    "node": "22.11.0"
+  },
   "version": "1.0.0",
   "description": "ICMS",
   "private": true,
@@ -16,9 +23,6 @@
     "sass": "^1.80.6",
     "select2": "^4.0.13",
     "sticky-kit": "^1.1.3"
-  },
-  "scripts": {
-    "test": ""
   },
   "author": "",
   "license": "ISC"
