Update env template to refect where secrets are stored.

--- a/.env.circleci
+++ b/.env.circleci
@@ -59,9 +59,9 @@ ICMS_GMP_BEIS_EMAIL='BEIS@example.com'  # /PS-IGNORE
 ICMS_SANCTIONS_EMAIL='SANCTIONS@example.com'  # /PS-IGNORE
 
 # Anti-virus
-ICMS_CLAM_AV_USERNAME='test' # Value in Parameter Store
+ICMS_CLAM_AV_USERNAME='' # Value in Parameter Store
 ICMS_CLAM_AV_PASSWORD='' # Value in Parameter Store
-ICMS_CLAM_AV_DOMAIN='clamav.london.cloudapps.digital'
+ICMS_CLAM_AV_DOMAIN='' # Value in Parameter Store
 
 # Age in seconds
 ICMS_DJANGO_SESSION_COOKIE_AGE=7200
