ECIL-180: Add several Exporter Access Request prototype views.
Changes:
  - ECIL-574 Add agent or exporter access request step.
  - ECIL-575 Add Company Details exporter access request step.
  - ECIL-578 Add Company Purpose exporter access request step.
  - ECIL-579 Add Company Products exporter access request step.
  - ECIL-580 Add accessible-autocomplete example.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "ICMS",
   "private": true,
   "dependencies": {
+    "accessible-autocomplete": "^3.0.1",
     "autobind-decorator": "^2.4.0",
     "core-js": "^3.39.0",
     "govuk-frontend": "^5.7.1",
