ECIL-620 Separate icms-hmrc and data workspace hawk api creds

--- a/.env.circleci
+++ b/.env.circleci
@@ -74,8 +74,11 @@ ICMS_SILENCED_SYSTEM_CHECKS='[]'
 ICMS_SEND_LICENCE_TO_CHIEF=False
 ICMS_ICMS_HMRC_DOMAIN='http://web-api:8000/' # web-api == icms-hmrc-web-api-1
 ICMS_ICMS_HMRC_UPDATE_LICENCE_ENDPOINT='mail/update-licence/'
+
 ICMS_HAWK_AUTH_ID='icms-api' # NOTE: For now icms-hmrc only accepts "icms-api" as a client.
 ICMS_HAWK_AUTH_KEY='ICMS_API_HAWK_KEY'
+ICMS_HAWK_ICMS_HMRC_API_KEY='ICMS_API_HAWK_KEY'
+ICMS_HAWK_DATA_WORKSPACE_API_KEY='ICMS_HAWK_DATA_WORKSPACE_API_KEY'
 
 ICMS_WORKBASKET_PER_PAGE=100
 ICMS_SET_INACTIVE_APP_TYPES_ACTIVE=False
