--- a/.env.local-docker
+++ b/.env.local-docker
@@ -77,6 +77,9 @@ ICMS_ICMS_HMRC_UPDATE_LICENCE_ENDPOINT='mail/update-licence/'
 ICMS_HAWK_AUTH_ID='icms-api' # NOTE: For now icms-hmrc only accepts "icms-api" as a client.
 ICMS_HAWK_AUTH_KEY='ICMS_API_HAWK_KEY'
 
+ICMS_HAWK_ICMS_HMRC_API_KEY='ICMS_API_HAWK_KEY'
+ICMS_HAWK_DATA_WORKSPACE_API_KEY='ICMS_HAWK_DATA_WORKSPACE_API_KEY'
+
 ICMS_WORKBASKET_PER_PAGE=100
 ICMS_SET_INACTIVE_APP_TYPES_ACTIVE=False
 ICMS_SHOW_DB_QUERIES=False
